@@ -1,3 +1,7 @@
+2020-09-23         [RELEASE] Release of social_gdpr 2.0.2 (Nicole Cordes)
+2020-09-17 f213798 [BUGFIX] Use correct CSS class for map icon (Nicole Cordes)
+2020-09-17 423f5d8 [BUGFIX] Improve iframe height and width detection (Nicole Cordes)
+
 2020-09-03         [RELEASE] Release of social_gdpr 2.0.1 (Nicole Cordes)
 2020-09-01 cd6f442 [TASK] Use same size constraints as defined in CSS (Nicole Cordes)
 2020-08-31 0c7be44 [FEATURE] add width and height to icon images to improve CLS score (Franz Kugelmann)
